# University

./: README.md
Algorytmy i struktury danych/Zadanie A - Chodnik/: main.cpp
Algorytmy i struktury danych/Zadanie B - Trójkąty/: main.cpp
Algorytmy i struktury danych/Zadanie C - Monety/: main.cpp
Algorytmy i struktury danych/Zadanie D - Magiczne piątki/: main.cpp
Algorytmy i struktury danych/Zadanie E - Królik Catalana/: main.cpp
Analiza numeryczna/Lista 1/: zad_1.py  zad_2.py  zad_3.py  zad_4.py  zad_5.py  zad_6.py
Analiza numeryczna/Lista 3/: 1.py  2.py  3.py
Analiza numeryczna/Lista 4/: 3.py  4.py  5.py
Architektura systemów komputerowych/Pracownia - asembler/: add_bignum.asm  clz.asm  insert_sort.asm  revbit.asm  sqrf.asm
Architektura systemów komputerowych/Pracownia - atak hakerski/: target_solving.txt
Architektura systemów komputerowych/Pracownia - rozbrajanie bomby/: bomb_solving.txt
Bazy danych/Projekt - Dokumentacja/: Dokumentacja.tex  README.md
Bazy danych/Projekt - System zarządzania partią polityczną/: README.md  app.txt  base.sql  init.txt  main.py
C++/Lista 1 - liczby rzymskie/: main.cpp
C++/Lista 2 - figury/: lib.h  main.cpp
C++/Lista 3 - kolejka/: lib.cpp  lib.h  main.cpp
C++/Lista 4 - wielomiany/: lib.cpp  lib.h  main.cpp
C++/Lista 5 - bufory/: lib.cpp  lib.h  main.cpp
C++/Lista 6 - wyrażenia arytmetyczne/: lib.cpp  lib.h  main.cpp
Rust/Projekt - aplikacja okienkowa/address-book/: Cargo.toml
Rust/Projekt - aplikacja okienkowa/address-book/src/: database.ron  db.rs  lib.rs  main.rs
Systemy wbudowane/: Makefile
(+540 files in other folders)
